# torch_forced_align

./: .dockerignore  Dockerfile  LICENSE  README.md  _config.yml  build_all.sh  index.md  pyproject.toml  setup.py  upload_release.sh
.scripts/: gen_index.sh
_data/: wheels.yml
assets/css/: style.scss
docker/: build.sh
src/torch_forced_align/: __init__.py  forced_align.py
src/torch_forced_align/csrc/: compute.cpp
src/torch_forced_align/csrc/cpu/: compute.cpp
src/torch_forced_align/csrc/gpu/: compute.cu
tests/: test_forced_align.py
whl/torch2.10.cpu/torch-forced-align/: index.html
whl/torch2.10.cu12/torch-forced-align/: index.html
whl/torch2.10.cu13/torch-forced-align/: index.html
whl/torch2.11.cpu/torch-forced-align/: index.html
whl/torch2.11.cu12/torch-forced-align/: index.html
whl/torch2.11.cu13/torch-forced-align/: index.html
whl/torch2.12.cpu/torch-forced-align/: index.html
whl/torch2.12.cu12/torch-forced-align/: index.html
whl/torch2.12.cu13/torch-forced-align/: index.html
whl/torch2.7.cpu/: index.html
whl/torch2.7.cpu/torch-forced-align/: index.html
whl/torch2.7.cu118/torch-forced-align/: index.html
whl/torch2.7.cu12/torch-forced-align/: index.html
whl/torch2.8.cpu/torch-forced-align/: index.html
whl/torch2.8.cu12/torch-forced-align/: index.html
whl/torch2.9.cpu/torch-forced-align/: index.html
whl/torch2.9.cu12/torch-forced-align/: index.html
whl/torch2.9.cu13/torch-forced-align/: index.html
