[build-system]
requires = ["setuptools", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_forced_align"
version = "0.1.0"
description = "Standalone distribution of torchaudio CTC forced alignment"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = []

[tool.setuptools.exclude-package-data]
"*" = ["*.cpp", "*.cu", "*.h", "*.cuh"]
