[build-system]
requires = ["setuptools", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_forced_align"
version = "0.1.0"
description = "Standalone distribution of torchaudio CTC forced alignment"
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

[dependency-groups]
dev = [
  "pytest",
  "setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
